# FrameWorkTest

./: CMakeLists.txt
IOBuffer/: IOBuffer.h  IODispatcher.cpp  IODispatcher.h  IOElement.h  README.md
Logger/: Logger.h  README.md
StateMachine/: IStateClassBase.h  IStateMachineBase.h  README.md  StateMachineBase.cpp  StateMachineBase.h
src/: CoreBase.cpp  CoreBase.h  FactoryBase.cpp  FactoryBase.h  FactoryList.h  StateMachine.cpp  StateMachine.h  level_exit.h  level_test.cpp  level_test.h  main.cpp  module_test.h
